the log panel issue with the alignment fixed

--- a/src/containers/ApplicationDashBoard/Dashboard/LogPanel/LogEntry/style.module.css
+++ b/src/containers/ApplicationDashBoard/Dashboard/LogPanel/LogEntry/style.module.css
@@ -1,5 +1,15 @@
-.log_container {
+
+.div_style {
+    display:table;
 }
-.nopadding{
-    padding-right: 0px !important;
+.span_style {
+    margin-right: 15px;
+    padding-left: 12px;
+}
+
+.span_type {
+    margin-right: 15px;
+    padding-left: 12px;
+    width:60px;
+    display:inline-block;
 }
